# jupyter-chat-components

./: .copier-answers.yml  .gitignore  CHANGELOG.md  README.md  package.json
.github/workflows/: deploy.yml
demo/: README.md  jupyter-lite.json  pyproject.toml
demo/contents/: components_demo.ipynb
src/: factory.tsx  icons.ts  index.ts  registry.ts  token.ts
src/components/: error.tsx  grouped-tool-calls.tsx  index.ts  inline-diff.tsx  message-queue.tsx  tool-call.tsx
style/: base.css
