[project]
name = "jupyter-chat-components-demo"
version = "0.1.0"
description = "JupyterLite demo for jupyter-chat-components"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.5.0",
    "jupyterlite-core>=0.7.0",
    "jupyterlite-javascript-kernel>=0.4.0a1",
    "jupyter-chat-components",
]

[tool.uv.sources]
jupyter-chat-components = { path = "../" }

